[CRONAPP-2292] Calendar Blockly methods (#97)
* [CRONAPP-2292] Calendar Blockly methods

* [CRONAPP-2292] Refactor Error Call

* [CRONAPP-2292] Added translation

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -18,6 +18,9 @@
   "back": "Back to previous Form",
   "backDescription": "Returns to previously opened Form",
   "blocklyWithFunction": "Blockly name",
+  "Calendar":"Calendar",
+  "calendarElementNotPresent": "The calendar component is not present on page.",
+  "calendarView":"Calendar view",
   "callbackBlocklyError": "Callback error: blockly (full) name to be called when retrieving server response with error",
   "callbackBlocklySuccess": "Callback success: blockly (full) name to be called when to get the server response successfully",
   "callbackError": "Callback error: callback function when error occurs",
@@ -42,6 +45,7 @@
   "Cell3GConnection": "Cell 3G connection",
   "Cell4GConnection": "Cell 4G connection",
   "CellGenericConnection": "Cell generic connection",
+  "century":"Century",
   "CEP": "Zip Code",
   "changeAttrValueDesc": "Function that change an attribute value from a element",
   "changeAttrValueName": "Change attribute value",
@@ -147,6 +151,7 @@
   "day": "Day",
   "daysToIncrement": "Days to increase",
   "dbName": "Database Name",
+  "decade":"Decade",
   "deleteProperty": "Delete property",
   "deletePropertyDescription": "Function that delete a property from object/json.",
   "destinationType": "Target type",
@@ -248,6 +253,14 @@
   "getAttributeValueName": "Get an attribute value",
   "getBaseUrlDescription": "Function to get server's base url",
   "getBaseUrlName": "Get Base Url",
+  "getCalendarMax":"Get maximum date",
+  "getCalendarMaxDesc":"Gets the maximum calendar date.",
+  "getCalendarMin":"Get minimum date",
+  "getCalendarMinDesc":"Gets the minimum calendar date.",
+  "getCalendarSelectDates":"Get selected dates",
+  "getCalendarSelectDatesDesc":"Gets the list of selected dates from the calendar. (Available only if the calendar selection mode is set to 'Multiple')",
+  "getCalendarValue":"Get current Date",
+  "getCalendarValueDesc":"Gets the date of the current single selection from the calendar.",
   "getCEPDescription": "Function to fetch zip code data",
   "getCEPName": "Get zip code",
   "getChatUser": "Get Chat User",
@@ -379,6 +392,8 @@
   "month": "Month",
   "monthsToIncrement": "Months to increase",
   "name": "Name",
+  "navigateCalendarTo":"Navigate calendar to",
+  "navigateCalendarToDesc":"Changes the current calendar view to the chosen date.",
   "newDate": "New date",
   "newline": "Newline",
   "newlineDescription": "Function that returns a newline '\\n'",
@@ -478,6 +493,14 @@
   "setActiveTablDesc": "Function that set active the selected tab",
   "setAttributeDescription": "Function that set an attribute value on attribute",
   "setAttributeName": "Set an attribute value",
+  "setCalendarMax":"Set maximum date",
+  "setCalendarMaxDesc":"Sets the maximum calendar date.",
+  "setCalendarMin":"Set minimum date",
+  "setCalendarMinDesc":"Sets the minimum calendar date.",
+  "setCalendarSelectDates":"Select dates",
+  "setCalendarSelectDatesDesc":"Select a list of dates from the calendar. (Available only if the calendar selection mode is set to 'Multiple')",
+  "setCalendarValue":"Set current Date",
+  "setCalendarValueDesc":"Sets the date of the current single selection from the calendar.",
   "setElementValueDescription": "Function that set a content on element",
   "setElementValueName": "Set a content element",
   "setLocalStorage": "Set Local Storage Item",
@@ -501,6 +524,9 @@
   "showMobileModalDesc": "Function that shows a modal in mobile devices",
   "showModal": "Show modal",
   "showModalDesc": "Function that shows a modal",
+  "sleep": "Sleep",
+  "sleepDescription": "Stops the execution of the block for the informed interval",
+  "sleepInterval": "Interval in milliseconds",
   "smallerDateToBeSubtracted": "Minor date to be subtracted",
   "socialLogin": "Social Login",
   "socialLoginDescription": "Function to login with social media(Facebook/Github|Google|Linkedin)",
@@ -564,8 +590,5 @@
   "XMLHasRootElementDescription": "Function that verify if exists a XML root element on XML document",
   "XMLHasRootElementName": "Has Root element?",
   "year": "Year",
-  "yearsToIncrement": "Years to increase",
-  "sleep": "Sleep",
-  "sleepDescription": "Stops the execution of the block for the informed interval",
-  "sleepInterval": "Interval in milliseconds"
+  "yearsToIncrement": "Years to increase"
 }
