--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -590,5 +590,6 @@
   "XMLHasRootElementDescription": "Function that verify if exists a XML root element on XML document",
   "XMLHasRootElementName": "Has Root element?",
   "year": "Year",
-  "yearsToIncrement": "Years to increase"
+  "yearsToIncrement": "Years to increase",
+  "maxFileSize": "Maximum file size:"
 }
