--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -590,5 +590,6 @@
   "XMLHasRootElementDescription": "Função que verifica se existe elemento raiz no documento XML",
   "XMLHasRootElementName": "Existe elemento raiz?",
   "year": "Ano",
-  "yearsToIncrement": "Anos a incrementar"
+  "yearsToIncrement": "Anos a incrementar",
+  "maxFileSize": "Tamanho máximo para arquivo:"
 }
