CRONAPP-2734 - Novas funções para obter e adicionar valores no Token da Requisição (#166)
* CRONAPP-2734 - Novas funções para obter e adicionar valores no Token da Requisição

* CRONAPP-2734 - Ajuste de comportamento diferenciado entre eventod e login e uso em outros locais

* CRONAPP-2685 - Ajuste para java 8

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -950,3 +950,12 @@ year=Year
 yearsToIncrement=Years an increment
 yes=Yes
 zipFile=Zip file
+getTokenClaim=Get Request Token Variable
+getTokenClaimDescription=It allows obtaining information from the Request Token, passing a key
+getTokenClaimKey=Key
+getTokenClaims=Get Request Token Data Map
+getTokenClaimsDescription=Function to obtain Request Token Data Map
+addTokenClaim=Define the Request Token Variable
+addTokenClaimDescription=Function that adds Data to the Request Token.
+addTokenClaimKey=Key
+addTokenClaimValue=Value
