--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -420,6 +420,8 @@ generateReport=Generate report
 generateReportDescription=Function to generate report file in the desired folder.
 generateUUIDDescription=Function that generate an universal identifier (UUID) and return as String
 generateUUIDName= Generate universal identifier
+getApplicationId=Get Application Id
+getApplicationIdDescription=Returns unique id of the current application 
 getCountTotalElementsDescription=Function that get the number of records from datasource with applied filters
 getCountTotalElementsName=Number of records
 getCurrentUserName=Get current user name
