--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -436,6 +436,8 @@ getFileName=Get file name
 getFileNameDescription=Get file name of a given path
 getFileParent=Get parent folder
 getFileParentDescription=Get a parent folder of a given file
+ArrayByteToFileName=Byte Array to File
+ArrayByteToFileDescription=Function that converts a Byte Array to File
 getFromSession=Get value in session
 getFromSessionDescription=Function that get value from session by name
 getHeader=Get param from request
