--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -435,6 +435,8 @@ getFileName=Obter nome do arquivo
 getFileNameDescription=Obtém o nome do arquivo de um caminho
 getFileParent=Obter pasta pai
 getFileParentDescription=Obtém a pasta de um arquivo
+ArrayByteToFileName=Array de Byte para Arquivo
+ArrayByteToFileDescription=Função que converte um array de byte em Arquivo
 getFromSession=Obter valor da sessão
 getFromSessionDescription=Função que obtém valor da sessão passando o nome do campo
 getHeader=Obter cabeçalho da requisição
