--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1,3 +1,11 @@
+encryptName=Criptografar
+encryptDescription=Função que criptografa um texto ou array de bytes basedo em uma chave
+encryptMessage=Valor a ser criptografado
+encryptKey=Chave de criptografia
+decryptName=Descriptografar
+decryptDescription=Função que descriptografa um texto ou array de bytes basedo em uma chave
+decryptMessage=Valor a ser descriptografado
+decryptKey=Chave de criptografia
 absFunctionDescription=Função que retorna um valor absoluto
 absFunctionName=Retorna o valor absoluto
 absFunctionParam0=Valor para calcular: Valor base para o cálculo do valor absoluto
