CRONAPP-3421 - Criar recurso para autenticação OAuth2 em projetos Mobile (#163)

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -380,6 +380,7 @@
   "logoutDescription": "Function that logout an user",
   "logoutName": "Logout",
   "makeCallServerBlocklyAsync": "call blockly asynchronous server - callback with blockly",
+  "maxFileSize": "Maximum file size:",
   "maximumAge": "Maximum Age",
   "mediaType": "Media Type",
   "messageQRCode": "Message: Message displayed when camera is openned",
@@ -507,6 +508,8 @@
   "setLocalStorageDesc": "Function that set an item in session storage on browser (global). This Item is keeped when the browser are closed and are visible to all tabs",
   "setProperty": "Set Value",
   "setPropertyDescription": "Function to assign value to object.",
+  "setRequestToken": "Define Token",
+  "setRequestTokenDescription": "Modify token that will be used in requests",
   "setSessionStorage": "Set Session Storage Item",
   "setSessionStorageDesc": "Function that set an item in session storage on browser. This item is clear when browser is closed and are only visible on current tab.",
   "setStorageItem": "Add Storage Item",
@@ -529,9 +532,11 @@
   "sleepInterval": "Interval in milliseconds",
   "smallerDateToBeSubtracted": "Minor date to be subtracted",
   "socialLogin": "Social Login",
-  "socialLoginDescription": "Function to login with social media(Facebook/Github|Google|Linkedin)",
+  "socialLoginDescription": "Function to login with social media (Facebook|Github|Google|Linkedin)",
   "socialNetwork": "Social Network",
   "sociaLoginDescription": "Function that login with selected social network",
+  "ssoLogin": "SSO Login (Oauth2)",
+  "ssoLoginDescription": "Function to login using SSO credentials. (Oauth2)",
   "startEditingModeDescription": "Function that receive a datasource and start the edition mode",
   "startEditingModeName": "Start edition mode",
   "startEditingModeParam0": "Datasource",
@@ -590,8 +595,5 @@
   "XMLHasRootElementDescription": "Function that verify if exists a XML root element on XML document",
   "XMLHasRootElementName": "Has Root element?",
   "year": "Year",
-  "yearsToIncrement": "Years to increase",
-  "maxFileSize": "Maximum file size:",
-  "setRequestToken": "Define Token",
-  "setRequestTokenDescription": "Modify token that will be used in requests"
+  "yearsToIncrement": "Years to increase"
 }
