Feature/CRONAPP-3572 - Uso de Camera com PWA
https://cronapp.atlassian.net/browse/CRONAPP-3572

## Problema:
Recurso de câmera (através da função obter imagem da câmera) não funciona em PWA
## Melhoria:

## Solução:
Compatibilizar a função.

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -29,6 +29,7 @@
   "callbackSuccess": "Callback success: callback function when success",
   "callServerBlockly": "Call blockly",
   "callServerBlocklyAsync": "Call blockly server async",
+  "camera": "Camera",
   "CategoryType.CHART": "Chart",
   "CategoryType.CONVERSION": "Conversion",
   "CategoryType.DATETIME": "Date and time",
@@ -249,6 +250,7 @@
   "functionToNewDate": "Function to create new date",
   "functionToOpenUrl": "Function to open url",
   "functionToUpdateDate": "Function to update an date",
+  "gallery": "Photo Library",
   "getApplicationName": "Get application name",
   "getAttributeValueDescription": "Function that get an attribute value",
   "getAttributeValueName": "Get an attribute value",
@@ -293,6 +295,7 @@
   "getHostappDesc": "Function that return the back-end path. Example: https://myapp.com/",
   "getHourFromDate": "Get date time",
   "getHoursBetweenDates": "Get hours total between dates",
+  "getImageFrom": "Get image from...",
   "getLocalStorage": "Get Local Storage Item",
   "getLocalStorageDesc": "Function that get an item in session storage on browser (global). This Item is keeped when the browser are closed and are visible to all tabs",
   "getMinuteFromDate": "Get date minute",
