--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -29,6 +29,7 @@
   "callbackSuccess": "Callback sucesso: função para callback quando for sucesso",
   "callServerBlockly": "Chamar Bloco",
   "callServerBlocklyAsync": "Chamar bloco servidor assíncrono",
+  "camera": "Câmera",
   "CategoryType.CHART": "Gráfico",
   "CategoryType.CONVERSION": "Conversão",
   "CategoryType.DATETIME": "Data e hora",
@@ -250,6 +251,7 @@
   "functionToNewDate": "Função para criar nova data",
   "functionToOpenUrl": "Função para abrir url",
   "functionToUpdateDate": "Função para alterar data",
+  "gallery": "Galeria",  
   "getApplicationName": "Obter nome da aplicação",
   "getAttributeValueDescription": "Função que obtém o valor o valor do atributo",
   "getAttributeValueName": "Obtém valor do atributo",
@@ -294,6 +296,7 @@
   "getHostappDesc": "Função que retorna o caminho do back-end. Exemplo: https://myapp.com/",
   "getHourFromDate": "Obter hora da data",
   "getHoursBetweenDates": "Obter total de horas entre datas",
+  "getImageFrom": "Obter imagem da...",  
   "getLocalStorage": "Obter Item da Sessão do navegador",
   "getLocalStorageDesc": "Função que obtém um item na sessão global do navegador. Esse item é mantido ao fechar o navegador e é visível em todas as abas",
   "getMinuteFromDate": "Obter minuto da data",
