Feature/CRONAPP-3572 - Uso de Camera com PWA
https://cronapp.atlassian.net/browse/CRONAPP-3572

## Problema:
Recurso de câmera (através da função obter imagem da câmera) não funciona em PWA
## Melhoria:

## Solução:
Compatibilizar a função.

--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -18,6 +18,7 @@
   "attrValue": "Valor do atributo: Valor do atributo contido no Identificador. Exemplo:  src='teste' retorna teste",
   "back": "Voltar para Formulário Anterior",
   "backDescription": "Volta para formulário aberto anteriormente",
+  "camera": "Câmera",  
   "blocklyWithFunction": "Nome do Bloco",
   "Calendar":"Calendário",
   "calendarElementNotPresent": "O componente de calendário não está presente na página.",
@@ -250,6 +251,7 @@
   "functionToNewDate": "Função para criar nova data",
   "functionToOpenUrl": "Função para abrir url",
   "functionToUpdateDate": "Função para alterar data",
+  "gallery": "Galeria",
   "getApplicationName": "Obter nome da aplicação",
   "getAttributeValueDescription": "Função que obtém o valor o valor do atributo",
   "getAttributeValueName": "Obtém valor do atributo",
@@ -294,6 +296,7 @@
   "getHostappDesc": "Função que retorna o caminho do back-end. Exemplo: https://myapp.com/",
   "getHourFromDate": "Obter hora da data",
   "getHoursBetweenDates": "Obter total de horas entre datas",
+  "getImageFrom": "Obter imagem da...",  
   "getLocalStorage": "Obter Item da Sessão do navegador",
   "getLocalStorageDesc": "Função que obtém um item na sessão global do navegador. Esse item é mantido ao fechar o navegador e é visível em todas as abas",
   "getMinuteFromDate": "Obter minuto da data",
