--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -488,11 +488,13 @@
   "screenNotifyName": "Show notification",
   "screenNotifyParam0": "Notification type: Can receive values success, error, warning, info or primary",
   "screenNotifyParam1": "Message",
-
-  "screenNotifySimpleDescription": "Função que exibe notificação simples",  
-  "screenNotifySimpleName": "Exibe notificação simples",
-  "screenNotifySimpleParam0": "Tipo da notificação: pode ser success, error, warning, info",
-  "screenNotifySimpleParam1": "Mensagem: Mensagem ou conteúdo html a ser exibido",
+  "screenNotifySimpleDescription": "Function that displays simple notification",  
+  "screenNotifySimpleName": "Displays simple notification",
+  "screenNotifySimpleParam0": "Notification type: can be success, error, warning, info",
+  "screenNotifySimpleParam1": "Message: Message content to be displayed",
+  "screenNotifySimpleParam2": "Animation: can be fade, slide, zoom",
+  "screenNotifySimpleParam3": "Vertical position: can be top or bottom",
+  "screenNotifySimpleParam4": "Horizontal position: can be left, center, right",
   "warning": "Warning",
   "info": "Info",
   "status": "Status",
@@ -502,8 +504,9 @@
   "left": "Left",
   "center": "Center",
   "right": "Right",
-
-
+  "fade": "Fade",
+  "slide": "Slide",
+  "zoom": "Zoom",
   "searchIds": "Identifier",
   "searchIdsDescription": "Identifier field from screen",
   "second": "Second",
