--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -508,6 +508,8 @@
   "fade": "Desaparecer",
   "slide": "Deslizar",
   "zoom": "Zoom",
+  "horizontalPosition": "Posição horizontal",
+  "verticalPosition": "Posição vertical",
   "searchIds": "Identificador",
   "searchIdsDescription": "Identificador do campo da tela",
   "second": "Segundo",
