add temporizador nas notificações

--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -491,11 +491,12 @@
   "screenNotifyParam1": "Mensagem: Mensagem ou conteúdo html a ser exibido",
   "screenNotifySimpleDescription": "Função que exibe notificação simples",  
   "screenNotifySimpleName": "Exibe notificação simples",
-  "screenNotifySimpleParam0": "Tipo da notificação: pode ser success, error, warning, info",
+  "screenNotifySimpleParam0": "Tipo da notificação: pode ser sucesso, erro, aviso, informação",
   "screenNotifySimpleParam1": "Mensagem: Mensagem ou conteúdo html a ser exibido",
   "screenNotifySimpleParam2": "Animação: pode ser desaparecer, deslizar, zoom",
   "screenNotifySimpleParam3": "Posição na vertical: pode ser topo ou embaixo",
   "screenNotifySimpleParam4": "Posição na horizontal: pode ser esquerda, centro, direita",
+  "screenNotifySimpleParam5": "Ocultar notificação: pode ser verdadeiro ou falso",
   "warning": "Aviso",
   "info": "Informação",
   "status": "Estado",
@@ -510,6 +511,7 @@
   "zoom": "Zoom",
   "horizontalPosition": "Posição horizontal",
   "verticalPosition": "Posição vertical",
+  "autoHide": "Ocultar notificação",
   "searchIds": "Identificador",
   "searchIdsDescription": "Identificador do campo da tela",
   "second": "Segundo",
