--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -495,6 +495,7 @@
   "screenNotifySimpleParam2": "Animation: can be fade, slide, zoom",
   "screenNotifySimpleParam3": "Vertical position: can be top or bottom",
   "screenNotifySimpleParam4": "Horizontal position: can be left, center, right",
+  "screenNotifySimpleParam5": "Hide notification: can be true or false",
   "warning": "Warning",
   "info": "Info",
   "status": "Status",
@@ -509,6 +510,7 @@
   "zoom": "Zoom",
   "horizontalPosition": "Horizontal Position",
   "verticalPosition": "Vertical Position",
+  "autoHide": "Hide notification",
   "searchIds": "Identifier",
   "searchIdsDescription": "Identifier field from screen",
   "second": "Second",
