ajustando os nomes

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -508,6 +508,8 @@
   "fade": "Fade",
   "slide": "Slide",
   "zoom": "Zoom",
+  "yes": "Yes",
+  "no": "No",
   "horizontalPosition": "Horizontal Position",
   "verticalPosition": "Vertical Position",
   "autoHide": "Hide notification",
