--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -606,5 +606,6 @@
   "showConfirmDialogAlert": "Show confirmation modal",
   "confimDialogAlert.icon": "Icon",
   "confimDialogAlert.title": "Title",
-  "confimDialogAlert.subtitle": "Subtitle"
+  "confimDialogAlert.subtitle": "Subtitle",
+  "hidebuttonCancel": "Hide the cancel button"
 }
