--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -607,5 +607,5 @@
   "confimDialogAlert.icon": "Icon",
   "confimDialogAlert.title": "Title",
   "confimDialogAlert.subtitle": "Subtitle",
-  "buttonSaveName": "Hide the confirm button"
+  "hidebuttonSave": "Hide the confirm button"
 }
