--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -607,5 +607,7 @@
   "confimDialogAlert.icon": "Ícone",
   "confimDialogAlert.title": "Título",
   "confimDialogAlert.subtitle": "Subtítulo",
-  "hidebuttonSave": "Esconder o botão confirmar"
+  "hidebuttonSave": "Esconder o botão confirmar",
+  "destroyConfirmDialogAlert": "Fechar modal de confirmação",
+  "dialogRef": "Identificador do modal"
 }
