--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -600,5 +600,16 @@
   "XMLHasRootElementDescription": "Função que verifica se existe elemento raiz no documento XML",
   "XMLHasRootElementName": "Existe elemento raiz?",
   "year": "Ano",
-  "yearsToIncrement": "Anos a incrementar"
+  "yearsToIncrement": "Anos a incrementar",
+  "confirmDialogAlertName": "Modal de confirmação",
+  "confirmDialogAlertDescription": "Função que exibe modal de confirmação, podendo personalizar o ícone, título, subtítulo e adicionar função nos botões salvar e cancelar",
+  "showConfirmDialogAlert": "Exibir modal de confirmação",
+  "confimDialogAlert.icon": "Ícone",
+  "confimDialogAlert.title": "Título",
+  "confimDialogAlert.subtitle": "Subtítulo",
+  "hidebuttonSave": "Esconder o botão confirmar",
+  "destroyConfirmDialogAlert": "Fechar modal de confirmação",
+  "dialogRef": "Identificador do modal",
+  "yes": "Sim",
+  "no": "Não"
 }
