ajustes do alinhamento

--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -611,5 +611,7 @@
   "destroyConfirmDialogAlert": "Fechar modal de confirmação",
   "dialogRef": "Identificador do modal",
   "yes": "Sim",
-  "no": "Não"
+  "no": "Não",
+  "buttonConfirmDialogAlertDescription": "descrição botão do modal",
+  "buttonConfirmDialogAlert": "botão do modal"
 }
