--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -613,5 +613,6 @@
   "yes": "Sim",
   "no": "Não",
   "buttonConfirmDialogAlertDescription": "descrição botão do modal",
-  "buttonConfirmDialogAlert": "botão do modal"
+  "buttonConfirmDialogAlert": "botão do modal",
+  "notificationCategory": "Notificações"
 }
