--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -614,5 +614,6 @@
   "no": "Não",
   "buttonConfirmDialogAlertDescription": "descrição botão do modal",
   "buttonConfirmDialogAlert": "botão do modal",
-  "notificationCategory": "Notificações"
+  "notificationCategory": "Notificações",
+  "primaryButton": "Botão de destaque"
 }
