--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -602,18 +602,17 @@
   "year": "Ano",
   "yearsToIncrement": "Anos a incrementar",
   "confirmDialogAlertName": "Modal de confirmação",
-  "confirmDialogAlertDescription": "Função que exibe modal de confirmação, podendo personalizar o ícone, título, subtítulo e adicionar função nos botões salvar e cancelar",
-  "showConfirmDialogAlert": "Exibir modal de confirmação",
-  "confimDialogAlert.icon": "Ícone",
-  "confimDialogAlert.title": "Título",
-  "confimDialogAlert.subtitle": "Subtítulo",
-  "hidebuttonSave": "Esconder o botão confirmar",
-  "destroyConfirmDialogAlert": "Fechar modal de confirmação",
-  "dialogRef": "Identificador do modal",
+  "confirmDialogAlertDescription": "Função que exibe modal de confirmação, podendo personalizar o ícone, título, subtítulo e adicionar função nos botões.",
+  "icon": "Ícone",
+  "subtitle": "Subtítulo",
+  "confimDialogAlert.listButton": "Lista de botões",
   "yes": "Sim",
   "no": "Não",
-  "buttonConfirmDialogAlertDescription": "descrição botão do modal",
-  "buttonConfirmDialogAlert": "botão do modal",
+  "buttonConfirmDialogAlertDescription": "Função que define as caracteristicas do(s) botão(ões).",
+  "buttonConfirmDialogAlert": "Botão do modal",
   "notificationCategory": "Notificações",
-  "primaryButton": "Botão de destaque"
+  "buttonConfirmDialogAlert.value": "Ação do botão",
+  "buttonConfirmDialogAlert.primaryButton": "Botão destaque",
+  "warning": "Aviso",
+  "info": "Informação"
 }
