--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -602,7 +602,7 @@
   "year": "Ano",
   "yearsToIncrement": "Anos a incrementar",
   "confirmDialogAlertName": "Modal de confirmação",
-  "confirmDialogAlertDescription": "Função que exibe modal de confirmação, podendo personalizar o ícone, título, subtítulo e adicionar função nos botões.",
+  "confirmDialogAlertDescription": "Função que exibe um modal de confirmação, permitindo a personalização do ícone, título, subtítulo e botões de ação.",
   "icon": "Ícone",
   "subtitle": "Subtítulo",
   "confimDialogAlert.listButton": "Lista de botões",
@@ -612,7 +612,7 @@
   "buttonConfirmDialogAlert": "Botão do modal",
   "notificationCategory": "Notificações",
   "buttonConfirmDialogAlert.value": "Ação do botão",
-  "buttonConfirmDialogAlert.primaryButton": "Botão destaque",
+  "buttonConfirmDialogAlert.primaryButton": "Botão de destaque",
   "warning": "Aviso",
   "info": "Informação"
 }
