Feature/CRONAPP-3720 - Utilização de Cookies
https://cronapp.atlassian.net/browse/CRONAPP-3720

## Problema:
## Melhoria:
Utilização de Cookies no lado cliente e servidor para salvar e recuperar mensagem ( em ambos os lados)
## Solução:
Criação de funções nas camadas cliente e servidor.

--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -508,6 +508,8 @@
   "setCalendarSelectDatesDesc":"Seleciona uma lista de datas do calendário. (Disponível apenas caso o modo de seleção do calendário esteja definido para 'Múltipla')",
   "setCalendarValue":"Definir data atual",
   "setCalendarValueDesc":"Define o valor da seleção única atual do calendário.",
+  "setCookie":"Definir Cookie.",
+  "setCookieDesc":"Função para definir Cookie no navegador do usuário.",
   "setElementValueDescription": "Função que define o conteúdo de um elemento",
   "setElementValueName": "Definir conteúdo do elemento",
   "setLocalStorage": "Adicionar Item na Sessão do navegador",
